--- a/lab_report_4.bib
+++ b/lab_report_4.bib
@@ -1,3 +1,53 @@
+@article{quinlan:1986,
+  title={Induction of decision trees},
+  author={Quinlan, J. Ross},
+  journal={Machine learning},
+  volume={1},
+  number={1},
+  pages={81--106},
+  year={1986},
+  publisher={Springer}
+}
+
+@article{tien:1985,
+  title={CART (Computer-Assisted Response Time)-A Decision Support Model for Estimating Conditional Response Times},
+  author={Tien, JM and Chou, CY},
+  year={1985}
+}
+
+@article{chipman:1998,
+  title={Bayesian CART model search},
+  author={Chipman, Hugh A and George, Edward I and McCulloch, Robert E},
+  journal={Journal of the American Statistical Association},
+  volume={93},
+  number={443},
+  pages={935--948},
+  year={1998},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{hyafil:1976,
+  title={Constructing optimal binary decision trees is NP-complete},
+  author={Hyafil, Laurent and Rivest, Ronald L},
+  journal={Information Processing Letters},
+  volume={5},
+  number={1},
+  pages={15--17},
+  year={1976},
+  publisher={Elsevier}
+}
+
+
+@article{cox:1958,
+  title={The regression analysis of binary sequences},
+  author={Cox, David R},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={215--242},
+  year={1958},
+  publisher={JSTOR}
+}
+
+
 @inproceedings{sahami:1998,
   title={A Bayesian approach to filtering junk e-mail},
   author={Sahami, Mehran and Dumais, Susan and Heckerman, David and Horvitz, Eric},
@@ -16,7 +66,7 @@
   url          = {http://research.google.com/pubs/ArtificialIntelligenceandMachineLearning.html}
 }
 
-@Misc{label:2003,
+@Misc{facebook:2015,
   author       = {Research at Facebook},
   title        = {Machine Learning},
   howpublished = {https://research.facebook.com/machinelearning},
