--- a/lab_report_4.bib
+++ b/lab_report_4.bib
@@ -1,3 +1,11 @@
+@article{quinlan:1996,
+  title={Improved use of continuous attributes in C4. 5},
+  author={Quinlan, J. Ross},
+  journal={Journal of artificial intelligence research},
+  pages={77--90},
+  year={1996}
+}
+
 @article{quinlan:1986,
   title={Induction of decision trees},
   author={Quinlan, J. Ross},
